feat: upgrade java to java 17